--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,10 @@
             <artifactId>spring-cloud-starter-security</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
